# augur

./: Cargo.toml
config/: augurcfg.toml
src/: lib.rs  main.rs
