[package]
name = "augur"
version = "0.1.0"
authors = ["Lili Isenberg <liliththana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
chrono = "0.4"
toml = "0.5.8"
dirs = "3.0.2"
serde = {version = "1.0", features = ["derive"]}
